--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Seasoned Data Scientist with 1+ years of experience driving business strategies through data-driven insights. Proven expertise in data science, statistical analysis, machine learning algorithms and project management.</p>
+            <p>Seasoned Data Scientist with 1+ years of experience leveraging data-driven insights to shape business strategies. Skilled in Data Science, AWS, Statistical Analysis, Machine Learning algorithms, and Project Management, with a track record of delivering impactful solutions.</p>
           </div>
         </div>
 
@@ -328,9 +328,11 @@
 						<span class="position">Vinayak Jewels India Pvt Ltd</span>
 						<p class="mt-4">Vinayak Jewels India Pvt Ltd, a leading Jewels Manufacturing company with over 10K+ professionals globally. It's a part of Dentsu International.
 							<ul>
-								<li>Analysed ad campaigns, clickstream, and customer surveys data, identified an increasing demand and launched a strategic product line.</li>
-								<li>Developed time series forecasting models to predict sales and optimize marketing budgets, got model performance of 92%.</li>
-								<li>Designed and executed A/B tests, performed rigorous statistical analysis. Led to 20% MoM increase in the conversion rate.</li>
+								<li>Production Workflow Optimization System:</li>
+								<li>Developed a comprehensive system to streamline and enhance the company's production processes.</li>
+								<li>Designed and implemented a system to analyze and optimize production workflows using data-driven insights.</li>
+								<li>Applied techniques like process mining, time series analysis, and simulation modeling to identify bottlenecks, reduce delays, and optimize resource allocation.</li>
+								<li>Delivered significant improvements in workflow efficiency and resource utilization, boosting overall operational performance</li>
 							</ul>
 						</p>
 					</div>
@@ -344,9 +346,10 @@
 						<span class="position">Cybrom Technology Pvt Ltd</span>
 						<p class="mt-4">Cybrom Technology is a data-driven digital marketing analytics and solutions company, helps top 100 global brands.
 							<ul>
-								<li>Performed in-depth market research and analysis to create online pages. Resulted in ~100% website growth and 30% increase in conversion rate YoY.</li>
-								<li>Delivered multiple training and mentorship sessions on analytical tools like SQL, MS Excel, Power BI, Tableau and Python.</li>
-								<li>Performed migration and enhancements for merchandising dashboard, involved data integration and its feature improvement.</li>
+								<li>Built an AI Chatbot for Video Transcription:</li>
+								<li>Developed an AI-powered chatbot that extracts audio from videos and generates accurate transcripts using a deep learning model.</li>
+								<li>Designed and implemented the chatbot with natural language processing (NLP) techniques to enhance user interaction.</li>
+								<li>Integrated the transcription process with a user-friendly chatbot interface, enabling users to uploadvideos, generate transcripts, and manage them directly through text commands.</li>
 							</ul>
 						</p>
 					</div>
