--- a/index.html
+++ b/index.html
@@ -356,6 +356,40 @@
 
 				</div>
 			</div>
+				<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">Sep 2023-March 2024</span>
+						<h2>Python Developer</h2>
+						<span class="position">CRISP India Pvt Ltd</span>
+						<p class="mt-4">CRISP India is a data-driven digital marketing analytics and solutions company, helps top 100 global brands.
+							<ul>
+								<li>Built an AI Chatbot for Video Transcription:</li>
+								<li>Developed an AI-powered chatbot that extracts audio from videos and generates accurate transcripts using a deep learning model.</li>
+								<li>Designed and implemented the chatbot with natural language processing (NLP) techniques to enhance user interaction.</li>
+								<li>Integrated the transcription process with a user-friendly chatbot interface, enabling users to uploadvideos, generate transcripts, and manage them directly through text commands.</li>
+							</ul>
+						</p>
+					</div>
+
+				</div>
+			</div>
+	    			<div class="col-md-6">
+					<div class="resume-wrap ftco-animate">
+						<span class="date">Sep 2023-March 2024</span>
+						<h2>Python Developer</h2>
+						<span class="position">Persistent Systems</span>
+						<p class="mt-4">Persistent Systems is a data-driven digital marketing analytics and solutions company, helps top 100 global brands.
+							<ul>
+								<li>Built an AI Chatbot for Video Transcription:</li>
+								<li>Developed an AI-powered chatbot that extracts audio from videos and generates accurate transcripts using a deep learning model.</li>
+								<li>Designed and implemented the chatbot with natural language processing (NLP) techniques to enhance user interaction.</li>
+								<li>Integrated the transcription process with a user-friendly chatbot interface, enabling users to uploadvideos, generate transcripts, and manage them directly through text commands.</li>
+							</ul>
+						</p>
+					</div>
+
+				</div>
+			</div>
 
 		<br>
 		<br>
