--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 						<span class="date">Aug 2024-Present</span>
 						<h2>Data Scientist</h2>
 						<span class="position">Vinayak Jewels India Pvt Ltd</span>
-						<p class="mt-4">Vinayak Jewels India Pvt Ltd, a leading Jewels Manufacturing company with over 10K+ professionals globally. It's a part of Dentsu International.
+						<p class="mt-4">For over 18 years, Vinayak's pursuit of excellence has driven us to elevate brands through our mastery of design, craftsmanship, and the art of jewelry-making.
 							<ul>
 								<li>Production Workflow Optimization System:</li>
 								<li>Developed a comprehensive system to streamline and enhance the company's production processes.</li>
@@ -344,12 +344,12 @@
 						<span class="date">Sep 2023-March 2024</span>
 						<h2>AI/ML Developer</h2>
 						<span class="position">Cybrom Technology Pvt Ltd</span>
-						<p class="mt-4">Cybrom Technology is a data-driven digital marketing analytics and solutions company, helps top 100 global brands.
+						<p class="mt-4">Cybrom Technology is a data-driven digital marketing analytics and solutions company, that helps top 100 global brands.
 							<ul>
 								<li>Built an AI Chatbot for Video Transcription:</li>
-								<li>Developed an AI-powered chatbot that extracts audio from videos and generates accurate transcripts using a deep learning model.</li>
-								<li>Designed and implemented the chatbot with natural language processing (NLP) techniques to enhance user interaction.</li>
-								<li>Integrated the transcription process with a user-friendly chatbot interface, enabling users to uploadvideos, generate transcripts, and manage them directly through text commands.</li>
+								<li>Integrated the transcription process with a user-friendly chatbot interface, enabling users to upload videos, generate transcripts, and manage them directly through text commands.</li>
+								<li>Develop an Advanced Attendance Tracking System:</li>
+								<li>Innovating Attendance Monitoring through Visual Capturing Technology.</li>
 							</ul>
 						</p>
 					</div>
@@ -358,15 +358,15 @@
 
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Sep 2023-March 2024</span>
-						<h2>Python Developer</h2>
+						<span class="date">Aug 2023-Sep 2023</span>
+						<h2>Python Developer Intern</h2>
 						<span class="position">CRISP India Pvt Ltd</span>
-						<p class="mt-4">CRISP India is a data-driven digital marketing analytics and solutions company, helps top 100 global brands.
+						<p class="mt-4">CRISP India is a data-driven digital marketing analytics and solutions company, that helps top 100 global brands.
 							<ul>
-								<li>Built an AI Chatbot for Video Transcription:</li>
-								<li>Developed an AI-powered chatbot that extracts audio from videos and generates accurate transcripts using a deep learning model.</li>
-								<li>Designed and implemented the chatbot with natural language processing (NLP) techniques to enhance user interaction.</li>
-								<li>Integrated the transcription process with a user-friendly chatbot interface, enabling users to uploadvideos, generate transcripts, and manage them directly through text commands.</li>
+								<li>Developed an Intelligent Product Recommendation System:</li>
+								<li>This system provides personalized product suggestions to enhance user experience and drive sales.</li>
+								<li>Empowered eCommerce with Power BI Insights for Sales Optimization:</li>
+								<li>This initiative aims to enhance strategic decision-making and improve sales performance. .</li>
 							</ul>
 						</p>
 					</div>
@@ -375,15 +375,14 @@
 			
 	    			<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
-						<span class="date">Sep 2023-March 2024</span>
-						<h2>Python Developer</h2>
+						<span class="date">June 2023-Aug 2023</span>
+						<h2>Software Developer Intern</h2>
 						<span class="position">Persistent Systems</span>
-						<p class="mt-4">Persistent Systems is a data-driven digital marketing analytics and solutions company, helps top 100 global brands.
+						<p class="mt-4">Persistent Systems is an Indian multinational technology services company based in Pune. It is primarily engaged in cloud computing, internet of things, endpoint security, big data analytics and software product engineering services.
 							<ul>
-								<li>Built an AI Chatbot for Video Transcription:</li>
-								<li>Developed an AI-powered chatbot that extracts audio from videos and generates accurate transcripts using a deep learning model.</li>
-								<li>Designed and implemented the chatbot with natural language processing (NLP) techniques to enhance user interaction.</li>
-								<li>Integrated the transcription process with a user-friendly chatbot interface, enabling users to uploadvideos, generate transcripts, and manage them directly through text commands.</li>
+								<li>Engineered creative solutions to complex technical challenges, leveraging advanced programming languages and frameworks to deliver innovative results.</li>
+								<li>Continuously researched and integrated new technologies to stay ahead of industry trends and improve system capabilities.</li>
+								<li>Worked collaboratively with cross-functional teams to understand requirements and provide tailored technical solutions.</li>
 							</ul>
 						</p>
 					</div>
@@ -447,7 +446,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3>
-                <p>Analyzed music store data using advanced SQL queires to identify gaps and increase the business growth.</p>
+                <p>Analyzed music store data using advanced SQL queries to identify gaps and increase business growth.</p>
               </div>
             </div>
           </div>
@@ -458,7 +457,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Data Analysis using Python Project for Beginners</a></h3>
-                <p>Performed exploratory data analysis on diwali sales data using Python to improve the customer experience.</p>
+                <p>Performed exploratory data analysis on Diwali sales data using Python to improve the customer experience.</p>
               </div>
             </div>
           </div>
@@ -469,7 +468,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Power BI Sales dashboard Project for Beginners</a></h3>
-                <p>Designed a power bi dashboard for Madhav Store to track and analyze the online sales data acorss India.</p>
+                <p>Designed a Power BI dashboard for the Madhav Store to track and analyze the online sales data across India.</p>
               </div>
             </div>
           </div>
