--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 .skill-mf .progress .progress-bar {
   height: .7rem;
-  background-color: #ffbd39;
+  background-color: #007bff;
 }
 
 
@@ -62,7 +62,7 @@
   position: relative;
   font-size: 30px;
   font-weight: bold;
-  color: rgb(255, 255, 255);
+  color: #ff5733;
   overflow: hidden;
   white-space: nowrap;
   animation: typing 3s steps(20, end) infinite;
