--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 								<li>Developed a comprehensive system to streamline and enhance the company's production processes.</li>
 								<li>Designed and implemented a system to analyze and optimize production workflows using data-driven insights.</li>
 								<li>Applied techniques like process mining, time series analysis, and simulation modeling to identify bottlenecks, reduce delays, and optimize resource allocation.</li>
-								<li>Delivered significant improvements in workflow efficiency and resource utilization, boosting overall operational performance</li>
+<!-- 								<li>Delivered significant improvements in workflow efficiency and resource utilization, boosting overall operational performance</li> -->
 							</ul>
 						</p>
 					</div>
