--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 									<li class="d-flex"><span>Domain:</span> <span>Retail, Ecommerce, Trading &amp; Digital Marketing</span></li>
 									<li class="d-flex"><span>Education:</span> <span>Bachelor of Engineering</span></li>
 									<li class="d-flex"><span>Language:</span> <span>English, Hindi</span></li>
-									<li class="d-flex"><span>Skills:</span> <span> Data Science, AI/ML, Python, SQL, Power BI &amp; Tableau</span></li>
+									<li class="d-flex"><span>Skills:</span> <span> Data Science, AI/ML, Python, Django, SQL, Power BI &amp; Tableau</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>AWS, PySpark, Excel, Git, Fast-API, Data Analytics &amp; Data Mining</span></li>
 									<li class="d-flex"><span>Interest:</span> <span>Traveling, Travel Photography, Cricket</span></li>
 									
