--- a/index.html
+++ b/index.html
@@ -445,8 +445,8 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3>
-                <p>Analyzed music store data using advanced SQL queries to identify gaps and increase business growth.</p>
+                <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Production Store Data Analysis using Python, Pandas, SQL & PowerBI</a></h3>
+                <p>Analyzed production stored data using Python, Pandas, PowerBI & advanced SQL queries to identify gaps and increase business growth.</p>
               </div>
             </div>
           </div>
