--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Production Store Data Analysis using Python, Pandas, SQL & PowerBI</a></h3>
-                <p>Analyzed production stored data using Python, Pandas, PowerBI & advanced SQL queries to identify gaps and increase business growth.</p>
+                <p>Analyzed production stored data using Python, Pandas, PowerBI & advanced SQL queries to identify bottlenecks and gaps to increase business growth.</p>
               </div>
             </div>
           </div>
@@ -468,7 +468,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg">Power BI Sales dashboard Project for Beginners</a></h3>
-                <p>Designed a Power BI dashboard for the Madhav Store to track and analyze the online sales data across India.</p>
+                <p>Automated the Power BI dashboard for Vinayak Jewels to track and analyze online sales data globally.</p>
               </div>
             </div>
           </div>
